# nucleo-h723zg

./: Cargo.toml  LICENSE-0BSD.txt  README.md  flash.sh  memory.x
.github/workflows/: cargo.yml
run/: Cargo.toml
src/: lib.rs
startup/: Cargo.toml
startup/src/: board.rs  lib.rs
